--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,11 +11,14 @@ body{
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
 .menu{
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
     padding: 1rem 4rem; 
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    position: sticky;
+    top: 0%;
 }
 
 .setLogin{
@@ -200,8 +203,9 @@ body{
     border: none;
     font-size: large;
 }
+
 .set-input input[type="checkbox"]{
-    transform: scale(2,2);
+    width: 3rem;
 }
 
 .putScore{
@@ -211,6 +215,7 @@ body{
     font-weight: bolder;
     float: right;
 }
+
 .putScore input{
     text-align: center;
     margin: 5px;
@@ -300,22 +305,6 @@ body{
 
 /* =============================================================================== */
    /* PLAY QUIZ  */
-
-
-/* <<<<<<<<<<<< CONTIANER QUIZ >>>>>>>>>>>>>>>>>>> */
-
-.contianerQuiz .showInterest{
-    margin-top: 4rem;
-    font-size: 200%;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-#showtitle{
-    font-style: italic;
-    color: #007bff;
-}
-
 ::selection{
     color: #fff;
     background: #007bff;
@@ -329,8 +318,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
-                rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
+                0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .info_box.activeInfo,
@@ -355,8 +344,7 @@ body{
 }
 
 .info_box{
-   
-    width: 640px;
+    width: 540px;
     background: #fff;
     border-radius: 5px;
     transform: translate(-50%, -50%) scale(0.9);
@@ -414,8 +402,7 @@ body{
 }
 
 .quiz_box{
-    margin-top: 2.5rem;
-    width: 650px;
+    width: 550px;
     background: #fff;
     border-radius: 5px;
     transform: translate(-50%, -50%) scale(0.9);
@@ -495,23 +482,23 @@ section .que_text{
 
 section .option_list{
     padding: 20px 0px;
-    display: grid;  
-    grid-template-columns: auto auto;
-    gap: 1rem;
+    display: block;   
 }
 
 section .option_list .option{
-    background: rgb(250, 248, 248);
-    border: 2px solid #84c5fe;
+    background: aliceblue;
+    border: 1px solid #84c5fe;
     border-radius: 5px;
-    padding: 15px;
+    padding: 8px 15px;
     font-size: 17px;
+    margin-bottom: 15px;
     cursor: pointer;
     transition: all 0.3s ease;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 section .option_list .option:last-child{
     margin-bottom: 0px;
 }
@@ -523,14 +510,14 @@ section .option_list .option:hover{
 }
 
 section .option_list .option.correct{
-    color: #fefffe;
-    background: #03bd2e;
+    color: #155724;
+    background: #d4edda;
     border: 1px solid #c3e6cb;
 }
 
 section .option_list .option.incorrect{
-    color: #fffefe;
-    background: #f10115;
+    color: #721c24;
+    background: #f8d7da;
     border: 1px solid #f5c6cb;
 }
 
@@ -688,8 +675,6 @@ footer button.show{
     color: #fff;
     background: #007bff;
 }
-
-
 
 
 @media (max-width:750px){
