--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,17 +10,24 @@
 body{
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
+
+ /* menu application */
+
 .menu{
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
     padding: 1rem 4rem; 
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     position: sticky;
-    top: 0%;
+    top: 0;
 }
-
+.menu .login,.title_onmenu,.logo{
+    width: 100%;
+}
+.login{
+    text-align: end;
+}
 .setLogin{
     text-decoration: none;
     background-color: orange;
@@ -33,8 +40,10 @@ body{
 .contianerApp{
     text-align: center;
 }
-.titleh1{
-    padding: 2rem;
+.title_onmenu{
+    text-align: center;
+    font-weight: bolder;
+    font-size: 1.5rem;
 }
 .card{
     display: flex;
@@ -65,17 +74,16 @@ body{
     color: white;
     transition: 0.5s;
 }
-.hide{
-    display: none;
-}
+
 /* ===================================================================== */
-/* LIST GET DATA  */
+/* view list questions  */
 
 .contianerList{
     width: 70%;
     text-align: center;
     margin:2rem auto;
 }
+
 .imgBack{
     margin-top: -0.5rem;
     margin-left: -4rem;
@@ -132,7 +140,7 @@ body{
     border-radius: 10px;
 
 }
-
+/* form create quiz */
 .setForm{
     padding: 10px;
     
@@ -187,6 +195,7 @@ body{
     margin: 1rem 0;
     border-left: 3px solid rgb(6, 10, 223);
 }
+.contentInput .h1-center{text-align: center;}
 .set-input{
     width: 100%;
     padding:4px 10px;
@@ -288,6 +297,10 @@ body{
     display: flex;
     justify-content: flex-end;
 }
+/* .btnInQuest a{
+    text-decoration:dotted;
+    display: block;
+} */
 .setListAdd img{
     cursor: pointer;
     width: 30px;
