--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -15,7 +15,7 @@
         <div class="logo">
             <img src="../../img/logo.png" alt="" width="15%" class="setlogo">
         </div>
-       
+        <div class="title_onmenu">SMART APP NODE-G02</div>
         <div class="login"><a href="#" class="setLogin">Login</a> </div>
     </div>
 
