--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,14 @@ body{
     position: sticky;
     top: 0;
 }
+
+
+#hide{
+    display: none;
+}
+#show{
+    display: block;
+}
 .menu .login,.title_onmenu,.logo{
     width: 100%;
 }
@@ -84,17 +92,6 @@ body{
     margin:2rem auto;
 }
 
-.imgBack{
-    margin-top: -0.5rem;
-    margin-left: -4rem;
-    float: left;
-    cursor: pointer;
-    background-color: white;
-    border-radius: 50%;
-}
-.imgBack:hover{
-    transform: scale(1.1,1.1);
-}
 
 .setList{
     list-style: none;
@@ -265,42 +262,105 @@ body{
     transform: scale(1.1,1.1);
     
 }
+/* ///// diplay questions */
 
-.contianerForm > .listQuestion > ul{
-    display: flex;
-    flex-direction: column-reverse;
+#dopDisplayOnscreen{
+    
+    border-radius: 10px;
 }
 
 .listQuestion .setListAdd{
-    font-weight: bold;
-    padding: 0;
-    display: block;
     background-color: rgb(238, 234, 234);
+    font-weight: bold;
+    display: block;
     border-radius: 10px;
-    
+    margin: 1rem 0;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+#dopDisplayOnscreen span{
+    width: 100%;
+    padding: 1rem 0.2rem;
+}
+.answers_list{
+    display: none;
+}
+
+#dopDisplayOnscreen .option{
+    background: aliceblue;
+    border: 2px solid #84c5fe;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-size: 1.3rem;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#dopDisplayOnscreen .answers_list .option.correct{
+    color: #155724;
+    background: #d4edda;
+    border: 1px solid #c3e6cb;
+}
+
+#dopDisplayOnscreen .answers_list .option.incorrect{
+    color: #721c24;
+    background: #f8d7da;
+    border: 1px solid #f5c6cb;
+}
+
+#dopDisplayOnscreen .answers_list .option .icon{
+    height: 26px;
+    width: 26px;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 13px;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    line-height: 24px;
+}
+.answers_list .option .icon.tick{
+    color: #23903c;
+    border-color: #23903c;
+    background: #d4edda;
+}
+
+.answers_list .option .icon.cross{
+    color: #a42834;
+    background: #f8d7da;
+    border-color: #a42834;
+}
+
+#dopDisplayOnscreen .clickDesplay{
+    text-align: center;
+}
+#dopDisplayOnscreen .clickDesplay .fas{
+    font-size:30px
 }
 
 .setListAdd .li-getquestion{
-    border-left: 3px solid rgb(6, 10, 223);
-    padding: 15px;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(111, 112, 112, 0.15) 0px 0px 0px 1px;
     margin: 5px 0;
-    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+    background: #0464ca;
+    border-radius: 4px;
+    padding:0 0.5rem;
+    color: white;
+    font-size: 2rem;
 }
 .btnInQuest{
+    background: #0464ca;
     border: none;
     width: 20%;
     display: flex;
     justify-content: flex-end;
 }
-/* .btnInQuest a{
-    text-decoration:dotted;
-    display: block;
-} */
+
 .setListAdd img{
     cursor: pointer;
     width: 30px;
