--- a/public/views/edit/edit.html
+++ b/public/views/edit/edit.html
@@ -11,7 +11,7 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>App quiz</title>
     <link rel="stylesheet" href="../../css/style.css">
-    
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
@@ -69,16 +69,25 @@
             <!-- CONTIANER SHOW LIST QUESTION  -->
             <div class="listQuestion">
                 <h2 class="titleQuiz hide"><span>Quiz: </span> <span id="subjectQuiz"> </span></h2>
-                <ul class="setListAdd" id="question_view">
-                    <!-- <li class="li-getquestion">
-                        <span class="getValue">QUESTION</span>
-                        <button class="btnInQuest">
-                            <a href="#goToupdate" class="editor">update<img src="../../img/edit.png" alt=""></a>
-                            <img src="../../img/delete-icon.png" alt="" class="deleter">
-                        </button>
-                    </li> -->
-                    
-                </ul> 
+                <div id="dopDisplayOnscreen">
+                    <!-- <div class="setListAdd" id="question_view">
+                        <div class="li-getquestion">
+                            <span class="getValue">QUESTION</span>
+                            <button class="btnInQuest">
+                                <img src="../../img/edit.png" alt=""  class="editor">
+                                <img src="../../img/delete-icon.png" alt="" class="deleter">
+                            </button>
+                        </div>
+                        <div class="answers_list">
+                            <div class="option"><span> A1 </span></div>
+                            <div class="option"><span> A2 </span></div>
+                            <div class="option"><span> A3 </span></div>
+                            <div class="option"><span> A4 </span></div>
+                        </div>  
+                        <div class="clickDesplay"><i class='fas fa-chevron-circle-down'></i></div>
+                    </div>  -->
+                </div>
+
                 <button type="submit" id="btnSaveId">SAVE</button>
             </div>
     </div>
