--- a/public/views/edit/edit.html
+++ b/public/views/edit/edit.html
@@ -72,7 +72,7 @@
                 <div id="dopDisplayOnscreen">
                     <!-- <div class="setListAdd" id="question_view">
                         <div class="li-getquestion">
-                            <span class="getValue">QUESTION</span>
+                            <span class="getValue"> 10 (pt) QUESTION</span>
                             <button class="btnInQuest">
                                 <img src="../../img/edit.png" alt=""  class="editor">
                                 <img src="../../img/delete-icon.png" alt="" class="deleter">
