--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -42,16 +42,22 @@
     <div class="quiz_box">
         <header>
             <div class="title">Awesome Quiz Application</div>
+            
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">15</div>
             </div>
             <div class="time_line"></div>
         </header>
+        
+        <!-- question and answer view -->
         <section>
+            <!-- question -->
             <div class="que_text">
           
             </div>
+            <!-- answers -->
+            <div class="typeOfAnswer">You can chose <span class="multiple"> 3 </span>answers only</div>
             <div class="option_list">
         
             </div>
@@ -59,6 +65,7 @@
 
       
         <footer>
+            
             <div class="total_que">
               
             </div>
