--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Create a Quiz App With Timer Using </title>
+    <link rel="shortcut icon" href="../../img/quizicon.png" type="image/x-icon">
+    <title> Do quiz </title>
     <link rel="stylesheet" href="../../css/style.css">
     <!-- FontAweome CDN Link for Icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
