--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -11,12 +11,12 @@
 </head>
 <body>
       <!-- header menu -->
-      <div class="menu">
+    <div class="menu">
         <div class="logo">
             <img src="../../img/logo.png" alt="" width="15%" class="setlogo">
         </div>
         <div class="title_onmenu">SMART APP NODE-G02</div>
-        <div class="login"><a href="#" class="setLogin">Login</a> </div>
+        <div class="login"><a href="http://localhost/" class="setLogin">Login</a> </div>
     </div>
 
     <!-- start Quiz button -->
