--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -17,7 +17,7 @@
             <img src="../../img/logo.png" alt="" width="15%" class="setlogo">
         </div>
         <div class="title_onmenu">SMART APP NODE-G02</div>
-        <div class="login"><a href="http://localhost/" class="setLogin">Login</a> </div>
+        <div class="login"><a href="http://localhost/" class="setLogin">Logout</a> </div>
     </div>
 
     <!-- start Quiz button -->
